/*
 *  UCF COP3330 Summer 2021 Assignment 4 Solution
 *  Copyright 2021 Keondez Robinson
 */

package ucf.assignments;

import javafx.scene.control.Button;
import javafx.scene.control.CheckBox;
import javafx.scene.layout.VBox;

public class Controller extends VBox {

    public CheckBox choice1;
    public CheckBox choice2;
    public Button deleteButton;
    public Button editButton;
    public Button addButton;
    public Button addList;
    public Button closeList;
    public Button deleteList;


}
