/*
 *  UCF COP3330 Summer 2021 Assignment 4 Solution
 *  Copyright 2021 Keondez Robinson
 */

package ucf.assignments;

public class Item {
    /*

    boolean status
    String description
    String date

    Constructor(String description, String date) {
        this.description = description
        this.date = date
        this.status = false, new item created would not be completed
    }

    Methods -
    setStatus(boolean status) {
        this.status = status
    }

    getStatus() {
        return status
    }

    setDescription(String description) {
        this.description = description
    }

    getDescription() {
        return description
    }

    setDate(String date) {
        this.date = date
    }

    getDate() {
        return date
    }

     */
}
