@startuml
class App
{
parent: root;
start()
main()
}

class controller
{
CheckBox choice1;
    CheckBox choice2;
    deleteButton;
    editButton;
    addButton;
    addList;
    closeList;
    deleteList;
}
class Item {
    complete : boolean
    text : String
    date : String

    setComplete()
    isComplete()
    setText()
    setDate()
    getText()
    getDate()
}

class ToDoList {
    name : String
    items : List<Item>

    setTitle()
    getTitle()
    setItem(item, index)
    getItem(index)

    addItem(item)
    removeItem(item)
    displayList(filter)
}

class ToDoListCollection {
    lists : List<ToDoList>

    addList(list)
    removeList(list)

    saveList()
    loadList(file)
}

enum Filter {
    ALL
    COMPLETE
    INCOMPLETE
}

App -- controller
controller -- ToDoListCollection
ToDoList <|-- Item
ToDoListCollection <|-- ToDoList

@enduml